# aoc-2020

./: Cargo.toml  less
day1/: Cargo.toml
day1-pt1/: Cargo.toml
day1-pt1/src/: main.rs
day1-pt2/: Cargo.toml
day1-pt2/src/: main.rs
day10-pt1/: Cargo.toml
day10-pt1/src/: main.rs
day10-pt2/: Cargo.toml
day10-pt2/src/: main.rs
day11-pt1/: Cargo.toml
day11-pt1/src/: main.rs
day11-pt2/: Cargo.toml
day11-pt2/src/: main.rs
day12-pt1/: Cargo.toml
day12-pt1/src/: main.rs
day12-pt2/: Cargo.toml
day12-pt2/src/: main.rs
day13-pt1/: Cargo.toml
day13-pt1/src/: main.rs
day13-pt2/: Cargo.toml
day13-pt2/src/: main.rs
day14-pt1/: Cargo.toml
day14-pt1/src/: main.rs
day14-pt2/: Cargo.toml
day14-pt2/src/: main.rs
day15-pt1/: Cargo.toml
day15-pt1/src/: main.rs
day15-pt2/: Cargo.toml
day15-pt2/src/: main.rs
day16-pt1/: Cargo.toml
day16-pt1/src/: main.rs
day16-pt2/: Cargo.toml
day16-pt2/src/: main.rs
day17-pt1/: Cargo.toml
day17-pt1/src/: main.rs
day17-pt2/: Cargo.toml
day17-pt2/src/: main.rs
day2-pt1/: Cargo.toml
day2-pt1/src/: main.rs
day2-pt2/: Cargo.toml
day2-pt2/src/: main.rs
day3-pt1/: Cargo.toml
day3-pt1/src/: main.rs
day3-pt2/: Cargo.toml
day3-pt2/src/: main.rs
day4-pt1/: Cargo.toml
day4-pt1/src/: main.rs
day4-pt2/: Cargo.toml
day4-pt2/src/: main.rs
day5-pt1/: Cargo.toml
day5-pt2/: Cargo.toml
day6-pt1/: Cargo.toml
day6-pt2/: Cargo.toml
day7-pt1/: Cargo.toml
day7-pt2/: Cargo.toml
day8-pt1/: Cargo.toml
day8-pt2/: Cargo.toml
day9-pt1/: Cargo.toml
day9-pt2/: Cargo.toml
(+10 files in other folders)
